# DDL_X_DINO

./: .gitignore  README.md  infer.py  infer_submission.py  infer_submission.sh  pyproject.toml  requirements.txt  run_gps_dino_wandb.sh  train.py  update_json_traces.py  update_submission_new.sh
cfgs/train/: gps_dino_mask_mixed_phase1_phase2_wo_maskloss.yaml
data/: __init__.py  ddl_canvas_augment.py  ddl_dataset_utils.py  ddl_mixed_dataset.py
datasets/: README.md
engine/: __init__.py  base_trainer.py  ddl_trainer.py
networks/: __init__.py  attention_blocks.py  dinov3_lora_layers.py  dinov3_token_extractors.py  gps_dino_mask_model.py  gps_dino_modules.py  rine_dinov3_detector.py  rine_dinov3_lora_detector.py
utils/: __init__.py  common.py  ddl_config.py  ddl_losses.py  lr_schedulers.py  network_factory.py  pretrained_loader.py  registry.py  resume_tools.py  validate.py
