[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigc-ddl"
version = "0.1.0"
description = "Detection and dense localization framework extracted from the attribution project."
requires-python = ">=3.8"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "Pillow>=10.0",
  "numpy>=1.26",
  "lightning>=2.2",
  "omegaconf>=2.3",
  "hydra-core>=1.3",
  "rich>=13.0",
  "scikit-learn>=1.4",
  "opencv-python>=4.8",
  "tqdm>=4.66",
  "openai>=1.0",
  "transformers>=4.56.0",
  "wandb>=0.16",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data", "engine", "networks", "utils"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
